Dealing with CSS

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -92,6 +92,13 @@ body {
 		display: inline;
 		width: 100%;
 	}
+	.lead
+	text-align:center;
+	display:table-cell;
+	vertical-align:middle;
+	height:500px;
+	background-color:#0d1e41
+	}
 }
 
 
