--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,12 +37,22 @@ body {
 
 .about-container {
 	background-color: #202c4a;
+	padding: 20px 0;
 	.about-event {
 		font-size: 25px;
 		text-align: center;
 		width: 1500px;
+		display: inline;
 		padding-top:20px;
 	}
+}
+
+.event-img {
+	float:right; 
+	margin-top: 23px; 
+	height: 580px; 
+	border-style: solid; 
+	border-width:2px
 }
 
 .home-container {
@@ -128,23 +138,45 @@ body {
 	}
 }
 
-.info {
 
-	.main{
-	font-size: 30px;
-	padding: 20px 0px 30px 500px;
+.main {
 	text-align: left;
+	h3 {
+		font-size: 35px;
+		border-bottom: 4px solid;
+		width: 90%;
 	}
-
-	.sub{
-	text-align: centre;
-	padding: 0px 500px 0px 500px;
+	dl {
+		font-size: 20px;
 	}
-		
-
 }
-.primary-headers{
-	text-align: right; 
+
+.sub {	
+	.activity {
+		h3 {
+			font-size: 33px;
+			border-bottom: 4px solid;
+			width: 90%;
+		}
+		h4 {
+			font-size: 28px;
+		}
+		dl, p {
+			font-size: 20px;
+		}
+	}
+}	
+
+.primary-headers {
+	text-align: center;
 	font-size: 80px;
-	margin: 50px 500px 0px 0px
+}
+
+footer {
+	background-color: black;
+	padding:20px 100px 50px 100px;
+	h2 {
+		text-align: center;
+		font-size: 70px; 
+	}
 }
